# jobsearch-auto

./: .env.example  .gitignore  MCP_QUICK_REFERENCE.md  MCP_USAGE.md  Makefile  README.md  docker-compose.yml  mcp-cli  pyproject.toml  test_direct_ingest.py  test_fastmcp.py  test_mcp.py  test_mcp_raw.py  test_mcp_verbose.py  test_openai.py  test_upload.py
.github/workflows/: ci.yml
libs/guardrails/: pyproject.toml
libs/guardrails/src/guardrails/: __init__.py  validator.py
libs/llm_driver/: pyproject.toml
libs/llm_driver/src/llm_driver/: __init__.py  driver.py
libs/mcp_clients/: pyproject.toml
libs/mcp_clients/src/mcp_clients/: __init__.py  direct_fs.py
libs/types_shared/: pyproject.toml
libs/types_shared/src/types_shared/: __init__.py
mcp/mcp_comm/: pyproject.toml
mcp/mcp_comm/src/mcp_comm/: __init__.py  __main__.py  server.py
mcp/mcp_fs/: pyproject.toml
mcp/mcp_fs/src/mcp_fs/: __init__.py  __main__.py  server.py  server_v2.py
mcp/mcp_pdf/: pyproject.toml
mcp/mcp_pdf/src/mcp_pdf/: __init__.py  __main__.py  server.py
services/apply_svc/: Dockerfile  pyproject.toml
services/apply_svc/src/apply_svc/: __init__.py  main.py
services/audit_svc/: Dockerfile  pyproject.toml
services/audit_svc/src/audit_svc/: main.py  models.py
services/cv_builder_svc/: Dockerfile  pyproject.toml
services/cv_builder_svc/src/cv_builder_svc/: __init__.py  main.py  models.py  tailor.py
services/doc_builder_svc/: Dockerfile  pyproject.toml
services/doc_builder_svc/src/doc_builder_svc/: __init__.py  document_builder.py  main.py  models.py
services/job_finder_svc/: Dockerfile  pyproject.toml
services/job_finder_svc/src/job_finder_svc/: __init__.py  adapters.py  main.py  models.py  rate_limiter.py
services/job_ranker_svc/: pyproject.toml
services/job_ranker_svc/src/job_ranker_svc/: __init__.py  main.py  models.py  ranker.py
services/notify_svc/: Dockerfile  pyproject.toml
services/notify_svc/src/notify_svc/: main.py  models.py
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/src/orchestrator/: audit_helper.py  main.py  models.py
services/profile_svc/: Dockerfile  pyproject.toml
services/profile_svc/src/profile_svc/: main.py
services/storage_svc/: Dockerfile  pyproject.toml
services/storage_svc/src/storage_svc/: ingest.py  main.py
src/jobsearch_auto/: __init__.py
tests/: test_llm_driver.py  test_mcp_servers.py  test_storage_svc.py
tools/: llm_smoke.py  mcp_call.py  mcp_call_fixed.py
