[project]
name = "jobsearch-auto"
version = "0.1.0"
description = "Job search automation monorepo"
authors = [{ name = "Jobsearch Auto", email = "ops@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "black==24.4.2",
  "ruff==0.4.8",
  "pytest==8.3.2",
  "httpx==0.28.1",
  "fastapi==0.111.0",
  "uvicorn[standard]==0.38.0"
]

[tool.uv.workspace]
members = [
  "services/*",
  "libs/*",
  "mcp/*"
]

[tool.uv.sources]
"mcp-clients" = { workspace = true }

[tool.black]
line-length = 88
include = "\\.pyi?$"
exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "UP"]
ignore = []
exclude = [
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  "build",
  "dist",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
