[project]
name = "storage-svc"
version = "0.1.0"
description = "Storage service"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.111.0", "uvicorn[standard]>=0.29.0", "mcp-clients>=0.1.0"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
